2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound_Check_List__c/Inbound_Check_List__c.object-meta.xml
<CustomObject>
    <label>Inbound CheckList</label>
    <nameField>
        <displayFormat>IBC{YY}{MM}{DD}-{00000}</displayFormat>
        <label>InBoundChkList Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inbound CheckLists</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>