2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound_Check_List__c/fields/Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_Name__c</fullName>
    <defaultValue>&quot;Helu-Trans (S) Pte Ltd, UEN No. 197902286N (HT)&quot;</defaultValue>
    <label>Agent Name &amp; UEN No.</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Helu-Trans (S) Pte Ltd, UEN No. 197902286N (HT)</fullName>
                <default>true</default>
                <label>Helu-Trans (S) Pte Ltd, UEN No. 197902286N (HT)</label>
            </value>
            <value>
                <fullName>Helutrans Artmove (S) Pte Ltd, UEN No. 200916870M (HTAM)</fullName>
            </value>
            <value>
                <fullName>HT</fullName>
                <isActive>false</isActive>
                <label>HT</label>
            </value>
            <value>
                <fullName>Helu-Trans Singapore</fullName>
                <isActive>false</isActive>
                <label>Helu-Trans Singapore</label>
            </value>
            <value>
                <fullName>Martinspeed</fullName>
                <isActive>false</isActive>
                <label>Martinspeed</label>
            </value>
            <value>
                <fullName>Momart Ltd</fullName>
                <isActive>false</isActive>
                <label>Momart Ltd</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>