2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound_Check_List__c/fields/Airport_Port_of_Loading__c.field-meta.xml
<CustomField>
    <fullName>Airport_Port_of_Loading__c</fullName>
    <label>Airport/Port of Loading</label>
    <length>40</length>
    <type>Text</type>
</CustomField>