2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound_Check_List__c/fields/Amount_CIF__c.field-meta.xml
<CustomField>
    <fullName>Amount_CIF__c</fullName>
    <label>Amount (Cost/FOB)</label>
    <type>TextArea</type>
</CustomField>