2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound_Check_List__c/fields/Amount_CIF_BN__c.field-meta.xml
<CustomField>
    <fullName>Amount_CIF_BN__c</fullName>
    <label>Amount (CIF)</label>
    <type>TextArea</type>
</CustomField>