2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound_Check_List__c/fields/Amount_Cost_BNI__c.field-meta.xml
<CustomField>
    <fullName>Amount_Cost_BNI__c</fullName>
    <label>Amount (Cost/FOB)</label>
    <type>TextArea</type>
</CustomField>