2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound_Check_List__c/fields/Amount_Freight_PI__c.field-meta.xml
<CustomField>
    <fullName>Amount_Freight_PI__c</fullName>
    <label>Amount (Freight)</label>
    <type>TextArea</type>
</CustomField>