2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound_Check_List__c/fields/BNI_Amount__c.field-meta.xml
<CustomField>
    <fullName>BNI_Amount__c</fullName>
    <label>Amount (Freight)</label>
    <type>TextArea</type>
</CustomField>