2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound_Check_List__c/fields/BNI_BG_Required__c.field-meta.xml
<CustomField>
    <fullName>BNI_BG_Required__c</fullName>
    <label>BG required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>30%</fullName>
            </value>
            <value>
                <fullName>50%</fullName>
            </value>
            <value>
                <fullName>100%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>