2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound_Check_List__c/fields/BNI_Currency__c.field-meta.xml
<CustomField>
    <fullName>BNI_Currency__c</fullName>
    <label>Currency (Freight)</label>
    <type>TextArea</type>
</CustomField>