2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound_Check_List__c/fields/BNI_Customs_Approval_Code__c.field-meta.xml
<CustomField>
    <fullName>BNI_Customs_Approval_Code__c</fullName>
    <label>Customs Approval Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>