2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound_Check_List__c/fields/BNI_Customs_Deposit_From__c.field-meta.xml
<CustomField>
    <fullName>BNI_Customs_Deposit_From__c</fullName>
    <label>Customs Deposit From</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HT&apos;s BG</fullName>
            </value>
            <value>
                <fullName>Other&apos;s BG</fullName>
            </value>
            <value>
                <fullName>LU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>