2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound_Check_List__c/fields/BNI_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>BNI_Exchange_Rate__c</fullName>
    <label>Exchange Rate</label>
    <length>40</length>
    <type>Text</type>
</CustomField>