2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound_Check_List__c/fields/BNI_Valid_Till__c.field-meta.xml
<CustomField>
    <fullName>BNI_Valid_Till__c</fullName>
    <label>Valid Till</label>
    <type>Date</type>
</CustomField>