2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound_Check_List__c/fields/Bonded_Lot_No__c.field-meta.xml
<CustomField>
    <fullName>Bonded_Lot_No__c</fullName>
    <label>Bonded Lot No.</label>
    <type>TextArea</type>
</CustomField>