2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound_Check_List__c/fields/Cargo_Receipt_Unstuffing_Location__c.field-meta.xml
<CustomField>
    <fullName>Cargo_Receipt_Unstuffing_Location__c</fullName>
    <label>Cargo Receipt/Unstuffing Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HT</fullName>
            </value>
            <value>
                <fullName>HTAM</fullName>
            </value>
            <value>
                <fullName>FASS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>