2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound_Check_List__c/fields/Cargo_Release_Location__c.field-meta.xml
<CustomField>
    <fullName>Cargo_Release_Location__c</fullName>
    <label>Cargo Release Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Changi FTZ</fullName>
            </value>
            <value>
                <fullName>T1</fullName>
            </value>
            <value>
                <fullName>T2</fullName>
            </value>
            <value>
                <fullName>T3</fullName>
            </value>
            <value>
                <fullName>T4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>