2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound_Check_List__c/fields/CheckedBy_Date__c.field-meta.xml
<CustomField>
    <fullName>CheckedBy_Date__c</fullName>
    <label>Date Checked</label>
    <type>Date</type>
</CustomField>