2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound_Check_List__c/fields/CIE_Claimant_UEN__c.field-meta.xml
<CustomField>
    <fullName>CIE_Claimant_UEN__c</fullName>
    <label>Claimant UEN</label>
    <length>40</length>
    <type>Text</type>
</CustomField>