2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound_Check_List__c/fields/CIE_Name__c.field-meta.xml
<CustomField>
    <fullName>CIE_Name__c</fullName>
    <label>Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>