2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound_Check_List__c/fields/CIE_NRIC_No__c.field-meta.xml
<CustomField>
    <fullName>CIE_NRIC_No__c</fullName>
    <label>NRIC No</label>
    <length>40</length>
    <type>Text</type>
</CustomField>