2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound_Check_List__c/fields/CIE_Telephone__c.field-meta.xml
<CustomField>
    <fullName>CIE_Telephone__c</fullName>
    <label>Telephone</label>
    <length>40</length>
    <type>Text</type>
</CustomField>