2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound_Check_List__c/fields/Currency_Amount__c.field-meta.xml
<CustomField>
    <fullName>Currency_Amount__c</fullName>
    <label>Currency (Cost)</label>
    <type>TextArea</type>
</CustomField>