2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound_Check_List__c/fields/Customs_Deposits_from__c.field-meta.xml
<CustomField>
    <fullName>Customs_Deposits_from__c</fullName>
    <label>Customs Deposits from</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HT&apos;s BG</fullName>
            </value>
            <value>
                <fullName>Other&apos;s BG</fullName>
            </value>
            <value>
                <fullName>LU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>