2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound_Check_List__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Date Prepared</label>
    <type>Date</type>
</CustomField>