2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound_Check_List__c/fields/Date_Declared__c.field-meta.xml
<CustomField>
    <fullName>Date_Declared__c</fullName>
    <label>Date Declared</label>
    <type>Date</type>
</CustomField>