2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound_Check_List__c/fields/Documents_Attached__c.field-meta.xml
<CustomField>
    <fullName>Documents_Attached__c</fullName>
    <label>Documents Attached</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MAWB/HAWB</fullName>
            </value>
            <value>
                <fullName>OBL/HBL</fullName>
            </value>
            <value>
                <fullName>INVOICE</fullName>
            </value>
            <value>
                <fullName>Calculation List</fullName>
            </value>
            <value>
                <fullName>Arrival Notice</fullName>
            </value>
            <value>
                <fullName>PACKING LIST</fullName>
            </value>
            <value>
                <fullName>LU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>