2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound_Check_List__c/fields/FCL_LCL__c.field-meta.xml
<CustomField>
    <fullName>FCL_LCL__c</fullName>
    <label>LCL or FCL</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LCL</fullName>
            </value>
            <value>
                <fullName>FCL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>