2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound_Check_List__c/fields/Freight_Charges__c.field-meta.xml
<CustomField>
    <fullName>Freight_Charges__c</fullName>
    <description>*If collect, please arrange to collect cheque payable to respective terminal before clearance of goods</description>
    <label>Freight Charges</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Collect</fullName>
            </value>
            <value>
                <fullName>Prepaid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>