2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound_Check_List__c/fields/Gross_Weight_Metric__c.field-meta.xml
<CustomField>
    <fullName>Gross_Weight_Metric__c</fullName>
    <label>Gross Weight (Metric)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>KGS</fullName>
            </value>
            <value>
                <fullName>TNE</fullName>
            </value>
            <value>
                <fullName>MTK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>