2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound_Check_List__c/fields/GST_Payable_Amount_SGD__c.field-meta.xml
<CustomField>
    <fullName>GST_Payable_Amount_SGD__c</fullName>
    <label>GST Payable Amount (SGD)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>