2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound_Check_List__c/fields/GST_to_be_deducted_from__c.field-meta.xml
<CustomField>
    <fullName>GST_to_be_deducted_from__c</fullName>
    <description>*If GST exceeds SGD5,000 per declaration, cheque must be made to &quot;Singapore Customs&quot; for deposit at UOB.
Bank-in slip to be attached with permit during clearance as proof of payment.</description>
    <label>GST payable by*</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Importer</fullName>
            </value>
            <value>
                <fullName>Helutrans (declaring agent)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>