2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound_Check_List__c/fields/HS_Code__c.field-meta.xml
<CustomField>
    <fullName>HS_Code__c</fullName>
    <label>HS Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>