2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound_Check_List__c/fields/If_DP_RM__c.field-meta.xml
<CustomField>
    <fullName>If_DP_RM__c</fullName>
    <label>If DP/RM, offset against Permit No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>