2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound_Check_List__c/fields/If_Others_DocAttach__c.field-meta.xml
<CustomField>
    <fullName>If_Others_DocAttach__c</fullName>
    <label>If Others</label>
    <length>40</length>
    <type>Text</type>
</CustomField>