2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound_Check_List__c/fields/If_Yes_against_OO_permit_no__c.field-meta.xml
<CustomField>
    <fullName>If_Yes_against_OO_permit_no__c</fullName>
    <label>If Yes, against OO permit no.:</label>
    <length>40</length>
    <type>Text</type>
</CustomField>