2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound_Check_List__c/fields/Importer_Name__c.field-meta.xml
<CustomField>
    <fullName>Importer_Name__c</fullName>
    <label>Importer Name</label>
    <length>199</length>
    <type>Text</type>
</CustomField>