2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound_Check_List__c/fields/Importer_UEN_No__c.field-meta.xml
<CustomField>
    <fullName>Importer_UEN_No__c</fullName>
    <label>Importer UEN No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>