2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound_Check_List__c/fields/Job_Ref_No__c.field-meta.xml
<CustomField>
    <fullName>Job_Ref_No__c</fullName>
    <label>Job Ref No.</label>
    <length>40</length>
    <type>Text</type>
</CustomField>