2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound_Check_List__c/fields/MAWB_OBL_No__c.field-meta.xml
<CustomField>
    <fullName>MAWB_OBL_No__c</fullName>
    <label>MAWB/OBL No.</label>
    <length>40</length>
    <type>Text</type>
</CustomField>