2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound_Check_List__c/fields/Onward_Flight__c.field-meta.xml
<CustomField>
    <fullName>Onward_Flight__c</fullName>
    <label>Flight</label>
    <length>40</length>
    <type>Text</type>
</CustomField>