2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound_Check_List__c/fields/Other_Cargo_Receipt_Unstuffing_Location__c.field-meta.xml
<CustomField>
    <fullName>Other_Cargo_Receipt_Unstuffing_Location__c</fullName>
    <label>Other Cargo Receipt/Unstuffing Location</label>
    <length>30</length>
    <type>Text</type>
</CustomField>