2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound_Check_List__c/fields/PermImport_Calculation__c.field-meta.xml
<CustomField>
    <fullName>PermImport_Calculation__c</fullName>
    <label>Calculation</label>
    <type>TextArea</type>
</CustomField>