2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound_Check_List__c/fields/PermImport_Notes__c.field-meta.xml
<CustomField>
    <fullName>PermImport_Notes__c</fullName>
    <defaultValue>&quot;* If GST exceed SGD $5,000 per declaration, cheque must be made payment to Singapore Customs for&quot; &amp; BR() &amp;
&quot;deposit at UOB Bank. Bank-In slip to be attached with permit during clearance as proof of payment.&quot;</defaultValue>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>