2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound_Check_List__c/fields/Permit_Checked_By__c.field-meta.xml
<CustomField>
    <fullName>Permit_Checked_By__c</fullName>
    <label>Permit Checked By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ben Lim</fullName>
            </value>
            <value>
                <fullName>Kevin Chew</fullName>
            </value>
            <value>
                <fullName>Zolene Chui</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>