2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound_Check_List__c/fields/Permit_declared_date__c.field-meta.xml
<CustomField>
    <fullName>Permit_declared_date__c</fullName>
    <label>Permit declared date</label>
    <type>Date</type>
</CustomField>