2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound_Check_List__c/fields/Permit_No__c.field-meta.xml
<CustomField>
    <fullName>Permit_No__c</fullName>
    <label>Permit No.</label>
    <length>40</length>
    <type>Text</type>
</CustomField>