2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound_Check_List__c/fields/Re_import__c.field-meta.xml
<CustomField>
    <fullName>Re_import__c</fullName>
    <label>Re-import</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>