2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound_Check_List__c/fields/ReleaseTerminal_IfOthers__c.field-meta.xml
<CustomField>
    <fullName>ReleaseTerminal_IfOthers__c</fullName>
    <label>If Others (Release Terminal)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>