2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound_Check_List__c/fields/Sea_FCLPick__c.field-meta.xml
<CustomField>
    <fullName>Sea_FCLPick__c</fullName>
    <label>For Sea - FCL(pick)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 X 20&apos; GP</fullName>
            </value>
            <value>
                <fullName>2 X 40&apos; GP</fullName>
            </value>
            <value>
                <fullName>1 X 40&apos; GP</fullName>
            </value>
            <value>
                <fullName>1 X 40&apos; HC</fullName>
            </value>
            <value>
                <fullName>2 X 40&apos; HC</fullName>
            </value>
            <value>
                <fullName>1 X 20&apos; OPEN TOP</fullName>
            </value>
            <value>
                <fullName>1 X 40&apos; OPEN TOP</fullName>
            </value>
            <value>
                <fullName>1 X 20&apos; REEFER</fullName>
            </value>
            <value>
                <fullName>1 X 40&apos; REEFER</fullName>
            </value>
            <value>
                <fullName>1 X 40&apos; HC REEFER</fullName>
            </value>
            <value>
                <fullName>1 X 20&apos; FLAT RACK</fullName>
            </value>
            <value>
                <fullName>1 X 40&apos; FLAT RACK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>