2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound_Check_List__c/fields/Terminal__c.field-meta.xml
<CustomField>
    <fullName>Terminal__c</fullName>
    <label>Release Terminal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>KD</fullName>
            </value>
            <value>
                <fullName>SATS</fullName>
            </value>
            <value>
                <fullName>DNATA</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>KZ</fullName>
            </value>
            <value>
                <fullName>PPZ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>