2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound_Check_List__c/fields/TP_ETD__c.field-meta.xml
<CustomField>
    <fullName>TP_ETD__c</fullName>
    <label>ETD</label>
    <type>Date</type>
</CustomField>