2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound_Check_List__c/fields/TP_HAWB_HBL_No__c.field-meta.xml
<CustomField>
    <fullName>TP_HAWB_HBL_No__c</fullName>
    <label>HAWB / HBL No</label>
    <length>40</length>
    <type>Text</type>
</CustomField>