2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound_Check_List__c/fields/Type_of_Permit__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Permit__c</fullName>
    <label>Type of Permit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ATA Carnet</fullName>
            </value>
            <value>
                <fullName>DNG - Duty and GST (Dutiable Goods)</fullName>
            </value>
            <value>
                <fullName>DP</fullName>
                <label>DP - Duty Paid (Offset II/RM)</label>
            </value>
            <value>
                <fullName>ID - Duty &amp; GST (Wine/Champagne/Liquors/Dutiable Goods)</fullName>
            </value>
            <value>
                <fullName>GST Relief (Embassy/Personal Effects)</fullName>
                <label>IE - GST Relief (Embassy/Personal Effects)</label>
            </value>
            <value>
                <fullName>Permanent</fullName>
                <label>IG - Permanent (GST)</label>
            </value>
            <value>
                <fullName>II - APS (Temporary Import, Fresh II)</fullName>
            </value>
            <value>
                <fullName>II - TCE (Temporary Import for exhibition/auctions without sales, MUSEUM)</fullName>
            </value>
            <value>
                <fullName>II - TCO (Temporary Import for other purposes, MUSEUM)</fullName>
            </value>
            <value>
                <fullName>II - TCS (Temporary Import for exhibition/auctions with sales)</fullName>
                <label>II - TCS (Temporary Import for exhibition/auctions with sales, MUSUEM)</label>
            </value>
            <value>
                <fullName>II - TCI (Temporary Export/Re-imported goods, Offset Fresh OO)</fullName>
            </value>
            <value>
                <fullName>IM - Storage in same FTZ per import</fullName>
            </value>
            <value>
                <fullName>IN-Storage in different FTZ from import FTZ</fullName>
                <label>IN - Storage in different FTZ from import FTZ</label>
            </value>
            <value>
                <fullName>IR - Re-Export Permit</fullName>
            </value>
            <value>
                <fullName>RM</fullName>
                <label>RM - Removal (Offset II/RM)</label>
            </value>
            <value>
                <fullName>Import under LU (Not Applicable)</fullName>
            </value>
            <value>
                <fullName>Transhipment (Not Applicable)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>