2nd training/Community/Community/Community1/force-app/main/default/objects/Inbound_Check_List__c/validationRules/Permit_Number_Checks.validationRule-meta.xml
<ValidationRule>
    <fullName>Permit_Number_Checks</fullName>
    <active>true</active>
    <description>For &apos;Permit No.&apos;  that starts with other irrelevant characters</description>
    <errorConditionFormula>AND(
NOT(BEGINS( Permit_No__c , &quot;II&quot;)) ,
NOT(BEGINS( Permit_No__c , &quot;IG&quot;)) ,
NOT(BEGINS( Permit_No__c , &quot;IN&quot;)) ,
NOT(BEGINS( Permit_No__c , &quot;OD&quot;)),
NOT(BEGINS( Permit_No__c , &quot;OO&quot;)),
NOT(BEGINS( Permit_No__c , &quot;DP&quot;)),
NOT(BEGINS( Permit_No__c , &quot;IM&quot;)),
NOT(BEGINS( Permit_No__c , &quot;OU&quot;)),
NOT(BEGINS( Permit_No__c , &quot;OT&quot;)),
NOT(BEGINS( Permit_No__c , &quot;IE&quot;)),
NOT(BEGINS( Permit_No__c , &quot;RM&quot;))
)</errorConditionFormula>
    <errorMessage>Permit number invalid</errorMessage>
</ValidationRule>